--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -39,8 +39,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "io.karte.tracker_sample"
-        minSdkVersion 16
+        applicationId "youji.maekawa.karte.example"
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
